--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+bcrypt==4.0.1
 blinker==1.6.2
+cffi==1.16.0
 click==8.1.7
+cryptography==41.0.4
 Flask==2.3.3
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+pycparser==2.21
 Werkzeug==2.3.7
 zipp==3.17.0
