--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
 bcrypt==4.0.1
 blinker==1.6.2
+certifi==2023.7.22
 cffi==1.16.0
+charset-normalizer==3.3.0
 click==8.1.7
 cryptography==41.0.4
+Deprecated==1.2.14
 Flask==3.0.0
 gunicorn==21.2.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
 pycparser==2.21
+PyGithub==2.1.1
+PyJWT==2.8.0
+PyNaCl==1.5.0
+python-dateutil==2.8.2
+requests==2.31.0
+six==1.16.0
+typing_extensions==4.8.0
+urllib3==2.0.5
 Werkzeug==3.0.0
+wrapt==1.15.0
